--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title></title>
+    <title>NETFLIX CLONE</title>
   </head>
   <body>
     <header class="showcase">
